Add link to server selection when there is a connection problem

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -16,8 +16,8 @@ countries=Countries
 library=Library
 station=station
 stations=stations
-connectionError=Connection error. Please try again
-connectionErrorDesc=Please check if your internet connection is working.
+connectionError=Connection error. Please try again.
+connectionErrorDesc=Please check your internet connection. If you think your internet is working try to select different server.
 noResults=No stations were found
 searchingLibrary=Searching Radio Directory
 searchingLibraryDesc=Start by typing at least 3 characters to the search field...
