--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -67,6 +67,8 @@ menu.app.quit=Quit
 menu.app.about=About
 menu.app.attributions=Attributions
 menu.app.server=Change API server
+menu.app.darkmode=Use Dark Mode
+menu.app.darkmode.restart=Please restart the app to apply changes!
 menu.player.controls=_Player
 menu.player.stop=Stop
 menu.player.start=Play
