Enable OS notifications for all platforms, use controlsfx on platforms where native notifications is not available.

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -74,7 +74,7 @@ menu.player.stop=Stop
 menu.player.start=Play
 menu.player.switch=Use Humble Media Player (FFmpeg)
 menu.player.animate=Show animated radio name
-menu.player.notifications=Show OS notifications
+menu.player.notifications=Send notification when stream title changes
 menu.favourites=_Favourites
 menu.favourites.show=Show Favourites
 menu.favourites.all=All favourites
