--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1,7 +1,8 @@
 #GLOBAL strings
 favourites=Favourites
 history=History
-topStations=Top Stations
+topStations=Most Voted Stations
+trendingStations=Trending Stations
 copy=Copy
 show=Show
 copy.image.url=Copy Image URL
