Ui fixes + Enabled Tray icon

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -5,6 +5,7 @@ topStations=Most Voted Stations
 trendingStations=Trending Stations
 copy=Copy
 show=Show
+exit=Exit app
 copy.image.url=Copy Image URL
 copy.stream.url=Copy Stream URL
 copy.nowPlaying=Copy track name
@@ -37,7 +38,7 @@ player.streamingError=Streaming error
 player.initError=Error while initializing player. Try to select Humble Media Player from Player menu.
 player.streamError=Error opening {0}. See app.log for details.
 player.noMetaData=Unknown track
-player.playRandomStation=Play random station from history
+player.playRandomStation=Play random station from current library
 menu.station.add=Add new station
 menu.station.favourite=Add to favourites
 menu.station.favouriteAdded={0} was added to favourites
@@ -129,7 +130,8 @@ info.bitrate=Bitrate (kbps)
 attributions.title=Third Party software used by
 attributions.name=Name
 attributions.version=Version
-servers.title=Available API servers
+servers.title=Select API server
+servers.available=Available servers
 servers.selected=selected
 servers.error=Error when getting servers:\n
 servers.notAvailable=No available servers right now. Try again later.
