Add sidebar with station details, fix some tests

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -18,6 +18,7 @@ countries=Countries
 library=Library
 station=station
 stations=stations
+unknown=Unknown
 connectionError=Connection error. Please try again.
 connectionErrorDesc=Please check your internet connection. If you think your internet is working try to select different server.
 noResults=No stations were found
