ui fixes + general refactoring

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -128,6 +128,7 @@ info.language=Language
 info.votes=Votes
 info.codec=Codec
 info.bitrate=Bitrate (kbps)
+info.clicktrend=Station Popularity
 attributions.title=Third Party software used by
 attributions.name=Name
 attributions.version=Version
