--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1,4 +1,4 @@
-#GLOBAL strings
+# GLOBAL strings
 favourites=Favourites
 history=History
 topStations=Most Voted Stations
@@ -30,16 +30,11 @@ field.invalid.length=The field is too short or too long
 field.invalid.value=This field contains invalid value
 field.invalid.country=This country is invalid
 field.invalid.url=This is not a valid URL address
-downloadError=List of countries cannot be downloaded right now.
 downloadRetry=Connection error. Try again?
-player.ffmpeg.info=Humble Media Player is used. Some stations might not play. Please switch to VLC player
-player.nowStreaming=Now streaming
 player.streamingStopped=Streaming stopped
 player.streamingError=Streaming error
-player.initError=Error while initializing player. Try to select Humble Media Player from Player menu.
 player.streamError=Error opening {0}. See app.log for details.
 player.noMetaData=Unknown track
-player.playRandomStation=Play random station from current library
 menu.station.add=Add new station
 menu.station.favourite=Add to favourites
 menu.station.favouriteAdded={0} was added to favourites
@@ -50,7 +45,7 @@ menu.station.favouriteRemoved={0} was removed from favourites
 menu.station.favourite.clear=Clear favourites...
 menu.station.vote=Add vote
 menu.station=_Station
-menu.station.info=Get info
+menu.station.info=Show station details
 menu.help=_Help
 menu.help.clearCache=Clear image cache
 menu.help.stats=Show API statistics
@@ -71,7 +66,6 @@ menu.app.about=About
 menu.app.attributions=Attributions
 menu.app.server=Change API server
 menu.app.darkmode=Use Dark Mode
-menu.app.darkmode.restart=Please restart the app to apply changes!
 menu.player.controls=_Player
 menu.player.stop=Stop
 menu.player.start=Play
@@ -89,7 +83,6 @@ cache.clear.empty=There is nothing to clear, cache is already empty!
 vote.ok=Your vote has been successfully added!
 vote.error=Can't vote right now. You should try again soon!
 macos.menu.window=Window
-favourites.clean=Clean favourites
 database.clear.confirm=Do you want to clear favourites?
 database.clear.text=This operation will remove all your saved favourite stations and cannot be undone.
 database.clear.ok=Favourites have been cleaned!
@@ -100,9 +93,7 @@ search.byTag=By Tag
 stats.statsUnavailable=Stats are not available at the moment.
 stats.status=Status
 stats.software_version=API Version
-stats.supported_version=Supported version
 stats.stations=Stations
-stats.countries=Countries
 stats.stations_broken=Broken stations
 stats.tags=Tags
 stats.title=API Statistics
@@ -118,7 +109,6 @@ add.tags=Tags
 add.tags.prompt=Separated by comma and space
 add.country=Country
 add.country.prompt=United Kingdom
-add.invalid.file=Invalid file selected!
 add.favourites=Also save to my favourites library
 add.success=Station has been added! It might take a significant time to show in the list.
 add.error=There was an error when adding the station.
@@ -129,22 +119,19 @@ info.votes=Votes
 info.codec=Codec
 info.bitrate=Bitrate (kbps)
 info.clicktrend=Station Popularity
+info.details=Station Details
+info.tags=Tags
 attributions.title=Third Party software used by
 attributions.name=Name
 attributions.version=Version
 servers.title=Select API server
-servers.available=Available servers
 servers.selected=selected
 servers.error=Error when getting servers:\n
 servers.notAvailable=No available servers right now. Try again later.
 servers.reload=Reload
 servers.restartNeeded=Selected server will be applied after restart of the app.
 server.save.ok=Server selected. Please restart the app to apply changes.
-server.save.error=Can't save selected server.
 about.datasource=Data provided by radio-browser.info
 pin=Pin
 unpin=Unpin
 pinned=Pinned
-pinned.message=Country {0} has been pinned
-unpinned.message=Country {0} has been unpinned
-pinning.error=There was an error with pin/unpin operation!
