--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -6,7 +6,6 @@ trendingStations=Trending Stations
 copy=Copy
 show=Show
 exit=Exit app
-copy.image.url=Copy Image URL
 copy.stream.url=Copy Stream URL
 copy.nowPlaying=Copy track name
 close=Close
@@ -20,7 +19,7 @@ station=station
 stations=stations
 unknown=Unknown
 connectionError=Connection error. Please try again.
-connectionErrorDesc=Please check your internet connection. If you think your internet is working try to select different server.
+connectionErrorDesc=Please check your internet connection. If you think your internet is working try to select different API server.
 noResults=No stations were found
 searchingLibrary=Searching Radio Directory
 searchingLibraryDesc=Start by typing at least 3 characters to the search field...
@@ -35,30 +34,33 @@ player.streamingStopped=Streaming stopped
 player.streamingError=Streaming error
 player.streamError=Error opening {0}. See app.log for details.
 player.noMetaData=Unknown track
-menu.station.add=Add new station
-menu.station.favourite=Add to favourites
+player.vlc.missing=VLC Player is not installed!
+player.vlc.missing.description=The app will try to use different player. For the best listening experience, \
+  we recommend that you install VLC player on your system!
+menu.station.add=Add New Station
+menu.station.favourite=Add To Favourites
 menu.station.favouriteAdded={0} was added to favourites
 menu.station.favouriteAdded.error=There was an error when adding a favourite station. Try again.
-menu.station.favouriteRemove=Remove from favourites
+menu.station.favouriteRemove=Remove from Favourites
 menu.station.favouriteRemove.error=There was an error removing favourite.
 menu.station.favouriteRemoved={0} was removed from favourites
-menu.station.favourite.clear=Clear favourites...
-menu.station.vote=Add vote
+menu.station.favourite.clear=Clear Favourites...
+menu.station.vote=Add Vote
 menu.station=_Station
-menu.station.info=Show station details
+menu.station.info=Show Station Details
 menu.help=_Help
-menu.help.clearCache=Clear image cache
-menu.help.stats=Show API statistics
-menu.help.openhomepage=Visit app website
+menu.help.clearCache=Clear Image Cache
+menu.help.stats=Show API Statistics
+menu.help.openhomepage=Visit App Website
 menu.help.logs=Open Logs Folder
 menu.help.loglevel=Change Log Level
 menu.help.loglevel.off=Off
 menu.help.loglevel.info=Info
-menu.help.loglevel.debug=Debug
+menu.help.loglevel.debug=All
 menu.history=_History
 menu.history.show=Show History
-menu.history.recent=Recently listened
-menu.history.clear=Clear history...
+menu.history.recent=Recently Listened
+menu.history.clear=Clear History...
 history.clear.confirm=Do you want to clear the history?
 history.clear.text=This operation will remove {0} items saved in your history and cannot be undone.
 menu.app.quit=Quit
@@ -70,18 +72,18 @@ menu.player.controls=_Player
 menu.player.stop=Stop
 menu.player.start=Play
 menu.player.switch=Use Humble Media Player (FFmpeg)
-menu.player.animate=Show animated radio name
-menu.player.notifications=Send notification when stream title changes
+menu.player.animate=Show Animated Track Name
+menu.player.notifications=Send Notification When Track Name Changes
 menu.favourites=_Favourites
 menu.favourites.show=Show Favourites
-menu.favourites.all=All favourites
+menu.favourites.all=All Favourites
 cache.clear.confirm=Do you want to clear image cache?
 cache.clear.ok=Cache cleared successfully.
 cache.clear.error=There was an error when clearing cache.
 cache.clear.text=This action will free {0} MB of stored images of radio stations. This action cannot be undone.
 cache.clear.empty=There is nothing to clear, cache is already empty!
 vote.ok=Your vote has been successfully added!
-vote.error=Can't vote right now. You should try again soon!
+vote.error=You can't vote for this station right now. Try again soon!
 macos.menu.window=Window
 database.clear.confirm=Do you want to clear favourites?
 database.clear.text=This operation will remove all your saved favourite stations and cannot be undone.
@@ -98,7 +100,7 @@ stats.stations_broken=Broken stations
 stats.tags=Tags
 stats.title=API Statistics
 add.title=Add new station
-add.label=Add station into radio-browser.info public directory. Please fill all required information correctly and check if the station has not already been added.
+add.label=Add station into radio-browser.info public directory. Please fill all required information correctly and check if the station is not already added.
 add.name=Name
 add.site=Website
 add.url=Stream URL
