remove unneded dependencies, refactoring

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -123,6 +123,7 @@ info.bitrate=Bitrate (kbps)
 info.clicktrend=Station Popularity
 info.details=Station Details
 info.tags=Tags
+info.visit.website=Visit website
 attributions.title=Third Party software used by
 attributions.name=Name
 attributions.version=Version
