Use internal window for Add Station dialog

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1,7 +1,7 @@
 # GLOBAL strings
 favourites=Favourites
 history=History
-topStations=Most Voted Stations
+topStations=Popular Stations
 trendingStations=Trending Stations
 copy=Copy
 show=Show
@@ -100,7 +100,7 @@ stats.stations_broken=Broken stations
 stats.tags=Tags
 stats.title=API Statistics
 add.title=Add new station
-add.label=Add station into radio-browser.info public directory. Please fill all required information correctly and check if the station is not already added.
+add.label=Add station into radio-browser.info public directory. Please check if the station is not already present first.
 add.name=Name
 add.site=Website
 add.url=Stream URL
