--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -134,7 +134,7 @@ servers.notAvailable=No available servers right now. Try again later.
 servers.reload=Reload
 servers.restartNeeded=Selected server will be applied after restart of the app.
 server.save.ok=Server selected. Please restart the app to apply changes.
-about.datasource=Data provided by radio-browser.info
+about.datasource=Stations data provided by radio-browser.info
 pin=Pin
 unpin=Unpin
 pinned=Pinned
