Add open URL dialog

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -11,6 +11,7 @@ copy.nowPlaying=Copy track name
 close=Close
 cancel=Cancel
 save=Save
+open=Open
 search=Search radio directory
 loading=Loading...
 countries=Countries
@@ -37,7 +38,7 @@ player.noMetaData=Unknown track
 player.vlc.missing=VLC Player is not installed!
 player.vlc.missing.description=The app will try to use different player. For the best listening experience, \
   we recommend that you install VLC player on your system!
-menu.station.add=Add New Station
+menu.station.add=New Station
 menu.station.favourite=Add To Favourites
 menu.station.favouriteAdded={0} was added to favourites
 menu.station.favouriteAdded.error=There was an error when adding a favourite station. Try again.
@@ -46,7 +47,10 @@ menu.station.favouriteRemove.error=There was an error removing favourite.
 menu.station.favouriteRemoved={0} was removed from favourites
 menu.station.favourite.clear=Clear Favourites...
 menu.station.vote=Add Vote
-menu.station=_Station
+menu.stream=Open Stream URL...
+menu.stream.title=Open Stream
+menu.stream.url=URL:
+menu.file=_File
 menu.station.info=Show Station Details
 menu.help=_Help
 menu.help.clearCache=Clear Image Cache
