Small stuff + better listviews

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -72,7 +72,7 @@ menu.app.about=About
 menu.app.attributions=Attributions
 menu.app.server=Change API server
 menu.app.darkmode=Use Dark Mode
-menu.player.controls=_Player
+menu.player.controls=_Playback
 menu.player.stop=Stop
 menu.player.start=Play
 menu.player.switch=Use Humble Media Player (FFmpeg)
@@ -103,6 +103,8 @@ stats.stations=Stations
 stats.stations_broken=Broken stations
 stats.tags=Tags
 stats.title=API Statistics
+stats.countries=Countries
+stats.languages=Languages
 add.title=Add new station
 add.label=Add station into radio-browser.info public directory. Please check if the station is not already present first.
 add.name=Name
