Use okhttp4, better error handling, upgrade libs

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -46,7 +46,7 @@ menu.station.favouriteRemove=Remove from Favourites
 menu.station.favouriteRemove.error=There was an error removing favourite.
 menu.station.favouriteRemoved={0} was removed from favourites
 menu.station.favourite.clear=Clear Favourites...
-menu.station.vote=Add Vote
+menu.station.vote=Vote for station
 menu.stream=Open Stream URL...
 menu.stream.title=Open Stream
 menu.stream.url=URL:
