Change appearance modal

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -67,6 +67,9 @@ menu.history.recent=Recently Listened
 menu.history.clear=Clear History...
 history.clear.confirm=Do you want to clear the history?
 history.clear.text=This operation will remove {0} items saved in your history and cannot be undone.
+app.appearance=Set App Appearance
+app.accentColor=Accent Color
+app.darkMode=Dark Mode
 menu.app.quit=Quit
 menu.app.about=About
 menu.app.attributions=Attributions
