--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -67,8 +67,11 @@ menu.history.recent=Recently Listened
 menu.history.clear=Clear History...
 history.clear.confirm=Do you want to clear the history?
 history.clear.text=This operation will remove {0} items saved in your history and cannot be undone.
-app.appearance=Set App Appearance
-app.accentColor=Accent Color
+menu.preferences=Preferences...
+app.preferences=Preferences
+app.appearance=App Appearance
+app.useSystemColor=Use system color
+app.accentColor=Accent color
 app.darkMode=Dark Mode
 menu.app.quit=Quit
 menu.app.about=About
@@ -136,8 +139,7 @@ info.visit.website=Visit website
 attributions.title=Third Party software used by
 attributions.name=Name
 attributions.version=Version
-servers.title=Select API server
-servers.selected=selected
+servers.title=Available servers
 servers.error=Error when getting servers:\n
 servers.notAvailable=No available servers right now. Try again later.
 servers.reload=Reload
