Preferences fragment, drag and drop support, ui fixes

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -41,9 +41,7 @@ player.vlc.missing.description=The app will try to use different player. For the
 menu.station.add=New Station
 menu.station.favourite=Add To Favourites
 menu.station.favouriteAdded={0} was added to favourites
-menu.station.favouriteAdded.error=There was an error when adding a favourite station. Try again.
 menu.station.favouriteRemove=Remove from Favourites
-menu.station.favouriteRemove.error=There was an error removing favourite.
 menu.station.favouriteRemoved={0} was removed from favourites
 menu.station.favourite.clear=Clear Favourites...
 menu.station.vote=Vote for station
@@ -70,14 +68,15 @@ history.clear.text=This operation will remove {0} items saved in your history an
 menu.preferences=Preferences...
 app.preferences=Preferences
 app.appearance=App Appearance
-app.useSystemColor=Use system color
-app.accentColor=Accent color
+app.useSystemColor=Use system accent color:
+app.useSystemColorDesc=When enabled, app will use the system accent color if the OS supports it.
+app.accentColor=Accent color:
 app.darkMode=Dark Mode
 menu.app.quit=Quit
 menu.app.about=About
 menu.app.attributions=Attributions
 menu.app.server=Change API server
-menu.app.darkmode=Use Dark Mode
+menu.app.darkmode=Enable dark mode:
 menu.player.controls=_Playback
 menu.player.stop=Stop
 menu.player.start=Play
@@ -91,14 +90,11 @@ cache.clear.confirm=Do you want to clear image cache?
 cache.clear.ok=Cache cleared successfully.
 cache.clear.error=There was an error when clearing cache.
 cache.clear.text=This action will free {0} MB of stored images of radio stations. This action cannot be undone.
-cache.clear.empty=There is nothing to clear, cache is already empty!
 vote.ok=Your vote has been successfully added!
 vote.error=You can't vote for this station right now. Try again soon!
 macos.menu.window=Window
 database.clear.confirm=Do you want to clear favourites?
 database.clear.text=This operation will remove all your saved favourite stations and cannot be undone.
-database.clear.ok=Favourites have been cleaned!
-database.clear.error=There was an error cleaning database!
 Search=Showing results for
 search.byName=By Name
 search.byTag=By Tag
@@ -124,10 +120,7 @@ add.tags.prompt=Separated by comma and space
 add.country=Country
 add.country.prompt=United Kingdom
 add.favourites=Also save to my favourites library
-add.success=Station has been added! It might take a significant time to show in the list.
-add.error=There was an error when adding the station.
 add.cleanupForm=Clear
-info.country=Country
 info.language=Language
 info.votes=Votes
 info.codec=Codec
@@ -135,16 +128,15 @@ info.bitrate=Bitrate (kbps)
 info.clicktrend=Station Popularity
 info.details=Station Details
 info.tags=Tags
+info.state=State
 info.visit.website=Visit website
 attributions.title=Third Party software used by
 attributions.name=Name
 attributions.version=Version
-servers.title=Available servers
+servers.selected=Selected server:
 servers.error=Error when getting servers:\n
-servers.notAvailable=No available servers right now. Try again later.
-servers.reload=Reload
+servers.notAvailable=No available servers right now. Click to Try again.
 servers.restartNeeded=Selected server will be applied after restart of the app.
-server.save.ok=Server selected. Please restart the app to apply changes.
 about.datasource=Stations data provided by radio-browser.info
 pin=Pin
 unpin=Unpin
