--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1,8 +1,8 @@
 # GLOBAL strings
 favourites=Favourites
 history=History
-topStations=Popular Stations
-trendingStations=Trending Stations
+topStations=Popular
+trendingStations=Trending
 copy=Copy
 show=Show
 exit=Exit app
