--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -108,7 +108,7 @@ stats.title=API Statistics
 stats.countries=Countries
 stats.languages=Languages
 add.title=Add new station
-add.label=Add station into radio-browser.info public directory. Please check if the station is not already present first.
+add.label=Add station into radio-browser.info public directory.
 add.name=Name
 add.site=Website
 add.url=Stream URL
