Initialize fragments and views correctly

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -107,6 +107,8 @@ stats.tags=Tags
 stats.title=API Statistics
 stats.countries=Countries
 stats.languages=Languages
+stats.clicks_last_hour=Clicks for last hour
+stats.clicks_last_day=Clicks for last day
 add.title=Add new station
 add.label=Add station into radio-browser.info public directory.
 add.name=Name
