Change log level settings to debug instead of all, correct name of variables in api client

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -58,7 +58,7 @@ menu.help.logs=Open Logs Folder
 menu.help.loglevel=Change Log Level
 menu.help.loglevel.off=Off
 menu.help.loglevel.info=Info
-menu.help.loglevel.debug=All
+menu.help.loglevel.debug=Debug
 menu.history=_History
 menu.history.show=Show History
 menu.history.recent=Recently Listened
