Update github actions

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -20,7 +20,7 @@ station=station
 stations=stations
 unknown=Unknown
 connectionError=Connection error. Please try again.
-connectionErrorDesc=Please check your internet connection. If you think your internet is working try to select different API server.
+connectionErrorDesc=Please check your internet connection. If you think your internet is working, click here to select different API server.
 noResults=No stations were found
 searchingLibrary=Searching Radio Directory
 searchingLibraryDesc=Start by typing at least 3 characters to the search field...
@@ -48,6 +48,8 @@ menu.station.vote=Vote for station
 menu.stream=Open Stream URL...
 menu.stream.title=Open Stream
 menu.stream.url=URL:
+menu.stream.stationName=Stream URL
+menu.stream.stationTag=Custom Stream URL
 menu.file=_File
 menu.station.info=Show Station Details
 menu.help=_Help
