Configurable System Tray

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -74,6 +74,8 @@ app.useSystemColor=Use system accent color:
 app.useSystemColorDesc=When enabled, app will use the system accent color if the OS supports it.
 app.accentColor=Accent color:
 app.darkMode=Dark Mode
+app.trayIcon=System Tray Icon
+app.trayIcon.enable=Enable Tray Icon:
 menu.app.quit=Quit
 menu.app.about=About
 menu.app.attributions=Attributions
