--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -126,6 +126,7 @@ info.votes=Votes
 info.codec=Codec
 info.bitrate=Bitrate (kbps)
 info.clicktrend=Station Popularity
+info.clickcount=Clicks
 info.tags=Tags
 info.state=State
 info.visit.website=Visit website
