--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -5,7 +5,7 @@ topStations=Popular
 trendingStations=Trending
 copy=Copy
 show=Show
-exit=Exit app
+exit=Quit
 copy.stream.url=Copy Stream URL
 copy.nowPlaying=Copy track name
 close=Close
