use radio button to switch between light/dark mode

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -12,7 +12,7 @@ close=Close
 cancel=Cancel
 save=Save
 open=Open
-search=Search radio directory
+search=Search
 loading=Loading...
 countries=Countries
 library=Library
@@ -69,14 +69,17 @@ app.preferences=Preferences
 app.appearance=App Appearance
 app.useSystemColor=Use system accent color:
 app.accentColor=Accent color:
-app.darkMode=Dark Mode
+app.darkMode=App Theme
 app.trayIcon=System Tray Icon
 app.trayIcon.enable=Enable Tray Icon:
 menu.app.quit=Quit
 menu.app.about=About
 menu.app.attributions=Attributions
 menu.app.server=Change API server
-menu.app.darkmode=Enable dark mode:
+menu.app.darkmode=Select App Theme:
+menu.app.dark=Dark
+menu.app.light=Light
+menu.app.system=System
 menu.player.controls=_Playback
 menu.player.stop=Stop
 menu.player.start=Play
