--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -94,7 +94,7 @@ cache.clear.error=There was an error when clearing cache.
 cache.clear.text=This action will free {0} MB of stored images of radio stations. This action cannot be undone.
 vote.ok=Your vote has been successfully added!
 vote.error=You can't vote for this station right now. Try again soon!
-macos.menu.window=Window
+macos.menu.window=_Window
 database.clear.confirm=Do you want to clear favourites?
 database.clear.text=This operation will remove all your saved favourite stations and cannot be undone.
 Search=Showing results for
