refactor library sidebar

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -23,7 +23,7 @@ connectionError=Connection error. Please try again.
 connectionErrorDesc=Please check your internet connection. If you think your internet is working, click here to select different API server.
 noResults=No stations were found
 searchingLibrary=Searching Radio Directory
-searchingLibraryDesc=Start by typing at least 3 characters to the search field...
+searchingLibraryDesc=Start by typing at least 3 characters to the search field
 field.max.length=The field is too long
 field.min.length=The field is too short
 field.invalid.length=The field is too short or too long
@@ -145,3 +145,5 @@ pin=Pin
 unpin=Unpin
 pinned=Pinned
 verified=Station is verified
+directory=Directory
+see.all.countries=See all countries
