keep filtered list after reopen of the modal

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -146,4 +146,4 @@ unpin=Unpin
 pinned=Pinned
 verified=Station is verified
 directory=Directory
-see.all.countries=See all countries
+see.all.countries=Browse all countries
