refactor loading of cover art

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -14,7 +14,7 @@ save=Save
 open=Open
 search=Search
 loading=Loading...
-countries=Countries
+countries=Browse countries
 library=Library
 station=station
 stations=stations
