Strings updated, small UI fixes, use openWindow instead of openModal on some fragments

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -52,7 +52,7 @@ menu.station.info=Show Station Details
 menu.help=_Help
 menu.help.clearCache=Clear Image Cache
 menu.help.stats=Show API Statistics
-menu.help.openhomepage=Visit App Website
+menu.help.openWebsite=Visit App Website
 menu.help.logs=Open Logs Folder
 menu.help.loglevel=Change Log Level
 menu.help.loglevel.off=Off
@@ -76,14 +76,14 @@ menu.app.quit=Quit
 menu.app.about=About
 menu.app.attributions=Attributions
 menu.app.server=Change API server
-menu.app.darkmode=Select App Theme:
+menu.app.darkMode=Select App Theme:
 menu.app.dark=Dark
 menu.app.light=Light
 menu.app.system=System
 menu.player.controls=_Playback
 menu.player.stop=Stop
 menu.player.start=Play
-menu.player.switch=Use Humble Media Player (FFmpeg)
+menu.player.switch=Disable VLC Player
 menu.player.animate=Show Animated Track Name
 menu.favourites=_Favourites
 menu.favourites.show=Show Favourites
@@ -116,6 +116,7 @@ add.name=Name
 add.site=Website
 add.url=Stream URL
 add.icon=Icon
+add.station.prompt=My Radio Station
 add.language=Language
 add.language.prompt=English
 add.tags=Tags
@@ -123,13 +124,12 @@ add.tags.prompt=Separated by comma and space
 add.country=Country
 add.country.prompt=United Kingdom
 add.favourites=Also save to my favourites library
-add.cleanupForm=Clear
 info.language=Language
 info.votes=Votes
 info.codec=Codec
 info.bitrate=Bitrate (kbps)
-info.clicktrend=Station Popularity
-info.clickcount=Clicks
+info.clickTrend=Station Popularity
+info.clickCount=Clicks
 info.tags=Tags
 info.state=State
 info.visit.website=Visit website
