better error handling, better locale support

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -19,8 +19,8 @@ library=Library
 station=station
 stations=stations
 unknown=Unknown
-connectionError=Connection error. Please try again.
-connectionErrorDesc=Please check your internet connection. If you think your internet is working, click here to select different API server.
+connectionError=Can't connect to the server.
+connectionErrorDesc=Please check your internet connection and click here to try again.
 noResults=No stations were found
 searchingLibrary=Searching Radio Directory
 searchingLibraryDesc=Start by typing at least 3 characters to the search field
@@ -29,7 +29,6 @@ field.min.length=The field is too short
 field.invalid.length=The field is too short or too long
 field.invalid.country=This country is invalid
 field.invalid.url=This is not a valid URL address
-downloadRetry=Connection error. Try again?
 player.streamingStopped=Streaming stopped
 player.streamingError=Streaming error
 player.streamError=Error opening {0}. See app.log for details.
@@ -146,4 +145,6 @@ unpin=Unpin
 pinned=Pinned
 verified=Station is verified
 directory=Directory
-see.all.countries=Browse all countries
+directory.all.countries=Browse all countries
+directory.error=Countries can't be retrieved from the server.
+
