info glyph refactored to toggleButton, small bugfixes for OpenStreamFragment

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -44,7 +44,7 @@ menu.station.vote=Vote for station
 menu.stream=Open Stream URL...
 menu.stream.title=Open Stream
 menu.stream.url=URL:
-menu.stream.stationName=Stream URL
+menu.stream.stationName=Custom Stream
 menu.stream.stationTag=Custom Stream URL
 menu.file=_File
 menu.station.info=Show Station Details
