--- a/src/main/resources/Messages_sk.properties
+++ b/src/main/resources/Messages_sk.properties
@@ -44,7 +44,7 @@ menu.station.vote=Hlasovať za stanicu
 menu.stream=Otvoriť URL streamu...
 menu.stream.title=Otvoriť Stream
 menu.stream.url=URL:
-menu.stream.stationName=URL Streamu
+menu.stream.stationName=Vlastný stream
 menu.stream.stationTag=Vlastný stream
 menu.file=_Súbor
 menu.station.info=Zobraziť informácie o stanici
